readme & package updates

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "author": "Bill Yeh",
+  "author": "Elijah Parker",
   "name": "luminance",
-  "description": "Simple pixel reader. Read pixels from JPEG and PNG images.",
+  "description": "Reads luminance and histogram data from JPEG images (based on Bill Yeh's pixelr)",
   "version": "0.1.6",
   "homepage": "https://github.com/elijahparker/node-luminance/",
   "repository": {
